# riggr-vault

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/riggr_vault/: __init__.py  app_client.py  client.py  lib.py  thin_client.py
tests/: conftest.py  test_app_client.py  test_thin_client.py
