[project]
name = "riggr-vault"
version = "0.1.8"
description = "Client library for OpenBao vault"
authors = [
    {name = "turiyadev", email = "code@turiya.dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "httpx (>=0.28.1,<1.0.0)",
]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
